[tool.poetry]
name = "orion-hello-world"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.8.2"
greenlet = "^1.1.2"
networkx = "^2.6.3"
coloredlogs = "^15.0.1"
matplotlib = "^3.4.3"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
